--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,7 @@ src = "src"
 out = "out"
 libs = ["lib"]
 
+# 设置模糊测试的默认运行次数为20
+fuzz_runs = 20
+
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
